# elvis-parsely

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: gcc.yml
include/parsely/: parsely.hpp
include/parsely/utility/: grammar_ast.hpp  grammar_parser.hpp  indirect.hpp  parse_tree_node.hpp  parser.hpp  parser_creator.hpp  string.hpp
test/: CMakeLists.txt  test.cpp
test/utility/: test_grammar_ast.cpp  test_grammar_parser.cpp  test_indirect.cpp  test_parser.cpp  test_parser_creator.cpp  test_string.cpp
